; ModuleID = '/home/carl/AnghaBench/brotli/c/enc/extr_encode.c_ChooseContextMode.c'
source_filename = "/home/carl/AnghaBench/brotli/c/enc/extr_encode.c_ChooseContextMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@MIN_QUALITY_FOR_HQ_BLOCK_SPLITTING = common dso_local global i64 0, align 8
@kMinUTF8Ratio = common dso_local global i32 0, align 4
@CONTEXT_SIGNED = common dso_local global i32 0, align 4
@CONTEXT_UTF8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32*, i64, i64, i64)* @ChooseContextMode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ChooseContextMode(%struct.TYPE_3__* %0, i32* %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @MIN_QUALITY_FOR_HQ_BLOCK_SPLITTING, align 8
  %16 = icmp sge i64 %14, %15
  br i1 %16, label %17, label %27

17:                                               ; preds = %5
  %18 = load i32*, i32** %8, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* %10, align 8
  %21 = load i64, i64* %11, align 8
  %22 = load i32, i32* @kMinUTF8Ratio, align 4
  %23 = call i32 @BrotliIsMostlyUTF8(i32* %18, i64 %19, i64 %20, i64 %21, i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %17
  %26 = load i32, i32* @CONTEXT_SIGNED, align 4
  store i32 %26, i32* %6, align 4
  br label %29

27:                                               ; preds = %17, %5
  %28 = load i32, i32* @CONTEXT_UTF8, align 4
  store i32 %28, i32* %6, align 4
  br label %29

29:                                               ; preds = %27, %25
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @BrotliIsMostlyUTF8(i32*, i64, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
